ui/src/app/shared/components/about/about.component.scss
@import 'variables';

.about {

}

.about__header {
    
}

.about__container {
    display: grid;
    grid-template-areas:
        "text"
        "portrait";
}

.about__description-text {
    grid-area: text;
}

.about__portrait-container {
    grid-area: portrait;
}

.about__description {
    color: $color-light;
    margin-bottom: $margin;
}

.about__technology-list {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-bottom: $margin;
}

.about__technology-list-item {
    margin-bottom: $half-margin;
}

.about__portrait-container {
}

.about__portrait {
    border: 1px solid black;
    box-shadow: 0px 0px 5px $color-dark;
    max-height: 720px;
    max-width: 100%;
    width: auto;
}

@media only screen and (min-width: 768px) {
    .about__container {
        grid-template-areas:
            "text portrait";

        .about__description-text {
            margin-right: $margin;
        }
    }

    .about__technology-list {
        margin-bottom: 0;
    }
}

